[tool.poetry]
name = "python-pulsechain"
version = "0.1.3"
description = "Python implementation for PulseChain API"
license = "MIT"
repository = "https://github.com/crypto-ralph/python-pulsechain"
authors = ["CryptoRalph <doxter@protonmail.com>"]
readme = "README.md"
include = [
    "LICENSE",
]
packages = [{include = "pulsechain"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
